Prizes Font Size fix on Mobile

--- a/static/css/prizes.css
+++ b/static/css/prizes.css
@@ -35,4 +35,8 @@
         margin: 15% !important;
         width: auto !important;
     }
+
+    .prizes-content {
+        font-size: 1.5rem;
+    }
 }
